fixed date contrast error on post view page

--- a/frontend/src/components/forms/style.scss
+++ b/frontend/src/components/forms/style.scss
@@ -52,10 +52,10 @@ button {
   text-align: center;
   border-radius: 5px;
   height: 30px;
-  background-color: hsl(171, 18, 95);
+  background-color: rgb(173, 252, 236);
   font-size: 16px;
-  background-color: $color-f;
-  color: white;
+  // background-color: $color-f;
+  color: $color-f;
   font-weight: bold;
 
   & + button {
